--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,12 +3,16 @@ theme:
   name: material
 nav:
   - 'Help': 'help.md'
+  - 'Quotes & Ideas': 'qandi.md'
   - '2025-01': 'Y2025-01.md'
   - '2024': 'Y2024.md'
   - 'Schematics': 'schematics.md'
   - 'Pins': 'pins.md'
   - 'Tutorial': 'tutorial.md'
+  - 'Firmware Spec Template': 'firmware_spec.md'
+
 markdown_extensions:
+  - attr_list
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
