Add papers folder Add 2025-01-20

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,8 @@ nav:
   - 'Tutorial': 'tutorial.md'
   - 'Resources': 'resources.md'
   - 'Papers': 'papers.md'
+  - 'Facts': 'facts.md'
+  - 'Projects': 'projects.md'
   - 'Firmware Spec Template': 'firmware_spec.md'
   - 'Board Spec Template': 'board_spec.md'
 
