Add personal page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,6 @@ theme:
   name: material
 nav:
   - 'Help': 'index.md'
-  - 'Quotes & Ideas': 'qandi.md'
   - '2025-01': 'Y2025-01.md'
   - '2024': 'Y2024.md'
   - 'Schematics': 'schematics.md'
@@ -14,6 +13,8 @@ nav:
   - 'Facts': 'facts.md'
   - 'Projects': 'projects.md'
   - 'Templates': 'templates.md'
+  - 'Quotes & Ideas': 'qandi.md'
+  - 'Personal': 'personal.md'
 
 markdown_extensions:
   - attr_list
