--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,11 +27,14 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.superfences
 
-# theme: readthedocs
+theme: readthedocs
 
-theme:
-  name: material
-  features:
-    - content.code.select
-    - content.code.copy
+#theme:
+#  name: material
+#  features:
+#    - content.code.select
+#    - content.code.copy
+
+#plugins:
+#  - pdf-export
 
