Add github collection

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
   - 'Papers': 'papers.md'
   - 'Facts': 'facts.md'
   - 'Projects': 'projects.md'
+  - 'Github Collection': 'github.md'
   - 'Templates': 'templates.md'
   #- 'Quotes & Ideas': 'qandi.md'
   #- 'Personal': 'personal.md'
